# Lidar_AI_Solution

./: .gitattributes  .gitmodules  LICENSE.md  README.md
CUDA-BEVFusion/: .gitattributes  .gitignore  CMakeLists.txt  README.md
CUDA-BEVFusion/configs/nuscenes/det/transfusion/secfpn/camera+lidar/resnet50/: default.yaml
CUDA-BEVFusion/qat/: README.md  export-camera.py  export-scn.py  export-transfuser.py  ptq.py  test-mAP-for-cuda.py
CUDA-BEVFusion/qat/lean/: exptool.py  funcs.py  quantize.py  tensor.py  train.py
CUDA-BEVFusion/src/: main.cpp  python.cpp
CUDA-BEVFusion/src/bevfusion/: bevfusion.cpp  bevfusion.hpp  camera-backbone.cu  camera-backbone.hpp  camera-bevpool.cu  camera-bevpool.hpp  camera-depth.cu  camera-depth.hpp  camera-geometry.cu  camera-geometry.hpp  camera-normalization.cu  camera-normalization.hpp  camera-vtransform.cu  camera-vtransform.hpp  head-transbbox.cu  head-transbbox.hpp  lidar-scn-onnx-parser.cpp  lidar-scn-onnx-parser.hpp  lidar-scn.cpp  lidar-scn.hpp  lidar-voxelization.cu  lidar-voxelization.hpp  transfusion.cu  transfusion.hpp
CUDA-BEVFusion/src/common/: check.hpp  dtype.hpp  launch.cuh  tensor.cu  tensor.hpp  tensorrt.cpp  tensorrt.hpp  timer.hpp  visualize.cu  visualize.hpp
CUDA-BEVFusion/src/onnx/: make_pb.sh  onnx-ml.pb.h  onnx-operators-ml.pb.cpp  onnx-operators-ml.pb.h
CUDA-BEVFusion/src/plugins/: custom_layernorm.cu
CUDA-BEVFusion/tool/: build_trt_engine.sh  compare.py  cudasm.sh  dump-data.py  environment.sh  format-code.sh  pybev.py  requirements.txt  run.sh  setup_vscode_intelli_sense.sh
CUDA-CenterPoint/: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
CUDA-CenterPoint/data/pkl/: nusc_test_in.pkl
CUDA-CenterPoint/include/: centerpoint.h  common.h  kernel.h  postprocess.h  preprocess.h  tensorrt.hpp  timer.hpp
CUDA-CenterPoint/model/: rpn_centerhead_sim.onnx
CUDA-CenterPoint/qat/: .gitignore  README.md
CUDA-CenterPoint/qat/det3d/torchie/apis/: __init__.py  train.py
CUDA-CenterPoint/qat/onnx_export/: export-scn.py  exptool.py  funcs.py
CUDA-CenterPoint/qat/tools/: centerpoint_eval.py  centerpoint_qat_pipline.py  sparseconv_quantization.py
CUDA-CenterPoint/src/: centerpoint.cpp  postprocess.cpp  postprocess_kernels.cu  preprocess.cpp  preprocess_kernels.cu  tensorrt.cpp
CUDA-CenterPoint/tool/: build.trt.sh  eval_nusc.py  export_neck_head.py  requirements.txt
CUDA-V2XFusion/: README.md
CUDA-V2XFusion/configs/: default.yaml
CUDA-V2XFusion/configs/V2X-I/: default.yaml
CUDA-V2XFusion/configs/V2X-I/det/centerhead/: default.yaml
CUDA-V2XFusion/docs/: install.md
CUDA-V2XFusion/evaluators/: det_evaluators.py  result2kitti.py
CUDA-V2XFusion/mmdet3d/apis/: train.py
CUDA-V2XFusion/mmdet3d/datasets/: builder.py  custom_3d.py  v2x_dataset.py
CUDA-V2XFusion/mmdet3d/models/backbones/: pillar_encoder.py
CUDA-V2XFusion/mmdet3d/models/fusion_models/: bevfusion.py
CUDA-V2XFusion/mmdet3d/models/vtransforms/: base.py  lss.py
CUDA-V2XFusion/mmdet3d/ops/bev_pool/: bev_pool.py
CUDA-V2XFusion/scripts/: dataset_merge.py  export_v2xfusion.py  ptq_v2xfusion.py  quantize.py  tensor.py  tinyq.py  train.py
libraries/3DSparseConvolution/: .gitattributes  .gitignore  Makefile  README.md
libraries/3DSparseConvolution/libspconv-1.1.0/include/spconv/: engine.hpp  tensor.hpp  version.hpp
libraries/3DSparseConvolution/libspconv-1.1.1/include/spconv/: check.hpp  (+5 more)
libraries/3DSparseConvolution/libspconv/example/: infer.cpp
libraries/3DSparseConvolution/libspconv/parser/: onnx-parser.cpp
libraries/3DSparseConvolution/src/: main.cpp  onnx-parser.cpp  onnx-parser.hpp  pyscn.cpp  voxelization.cu  voxelization.cuh
libraries/3DSparseConvolution/src/onnx/: make_pb.sh  onnx-ml.pb.cpp  onnx-ml.pb.h  onnx-operators-ml.pb.cpp  onnx-operators-ml.pb.h
libraries/3DSparseConvolution/tool/: code.format.sh  compare.py  draw.perf.py  export-helper.py  pytest.py  requirements.txt  test_all.sh
libraries/3DSparseConvolution/tool/bevfusion-export/: ReadME.md  export-scn.py  export-transfuser.py  exptool.py  funcs.py  tensor.py
libraries/3DSparseConvolution/tool/centerpoint-export/: export-scn.py  exptool.py  funcs.py
libraries/3DSparseConvolution/workspace/bevfusion/: bevfusion.scn.xyz.onnx  bevfusion.scn.zyx.onnx  infer.xyz.coors  infer.xyz.dense  infer.xyz.voxels  infer.zyx.coors  infer.zyx.dense  infer.zyx.voxels
libraries/3DSparseConvolution/workspace/centerpoint/: centerpoint.scn.PTQ.onnx  centerpoint.scn.onnx  in_features.torch.fp16.tensor  in_indices_xyz.torch.int32.tensor  in_indices_zyx.torch.int32.tensor  out_dense.torch.fp16.tensor
libraries/YUVToRGB/: .gitattributes  .gitignore  Makefile  README.md  compare-with-opencv.py  perf-full.py
libraries/YUVToRGB/src/: main.cpp  yuv_to_rgb.cpp  yuv_to_rgb.hpp
libraries/YUVToRGB/workspace/: perf-full.csv
libraries/YUVToRGB/workspace/data/: nv12_1280x720.yuv
libraries/YUVToRGB/yuvtorgb_library/: yuv_to_rgb_kernel.cu  yuv_to_rgb_kernel.hpp
libraries/cuOSD/: .gitattributes  .gitignore  Makefile  README.md  cuosd
libraries/cuOSD/data/: my.nvfont  std-random-boxes-1920x1080.txt  std-random-boxes.txt
libraries/cuOSD/data/assets/: bg_1932x1200_nv12.yuv  dk_436x600_nv12.yuv  mask.nv12  sample.nv12
libraries/cuOSD/src/: cuosd.cpp  cuosd.h  cuosd_kernel.cu  cuosd_kernel.h  memory.hpp
libraries/cuOSD/src/textbackend/: backend.cpp  backend.hpp  pango-cairo.cpp  pango-cairo.hpp  stb.cpp  stb.hpp  stb_truetype.h
libraries/cuOSD/test/: gpu_image.cu  gpu_image.h  main.cpp  make-random-boxes.py  perf-std.sh  perf.sh  pycuosd.cpp  pytest.py  stb_image_write.h
libraries/cuOSD/test/cuosd/: __init__.py
libraries/roiconvert/: .gitattributes  .gitignore  Makefile  README.md
libraries/roiconvert/data/: 1920x1080-i420.yuv  1920x1080-nv12.yuv  375x500.rgb  375x500.rgba  nv12_1280x720.yuv  nv12_3840x2160.yuv  yuyv_3840x2160_yuyv422.yuv
libraries/roiconvert/roi_conversion/: roi_conversion.cu  roi_conversion.hpp
libraries/roiconvert/src/: python.cpp
libraries/roiconvert/unitests/: test_all.py  test_nv12.py  test_perf.py  test_resize.py  test_rgba.py
(+27 files in other folders)
